2018-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: exclude pg_wal/*

2018-01-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/find.c (dump_storage_hash_exist): g_free(key)

2018-01-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c server-src/planner.c: Don't do some check
	  if --no-dump or no storage defined

2018-01-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/xml-source/amanda-changers.7.xml: Document the diskflat changer
	* man/xml-source/amanda-devices.7.xml: The diskflat device must use
	  the diskflat changer

2018-01-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Do not add a COPY command if the dump is
	  already on the storage
	* server-src/driverio.c (startup_vault_tape_process): Use same taper
	  as storage

2018-01-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/cmdfile.c (cmdfile_get_nb_image_cmd_for_storage): New
	  function
	* server-src/cmdfile.h (cmdfile_get_nb_image_cmd_for_storage): Add
	  prototype
	* server-src/find.c (make_dump_storage_hash, add_dump_storage_hash,
	  dump_storage_hash_exist): New functions to keep track of all
	  available dump
	* server-src/find.h (make_dump_storage_hash, add_dump_storage_hash,
	  dump_storage_hash_exist): Add prototypes

2018-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Send CLOSE-VOLUME command only if the volume
	  is opened

2018-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: fix queue handling

2018-01-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: s/xlog/wal/ in function name for version
	  10 and newer

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/success-dumper-taper-vault.pl: Merge error

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (server-src/driver.c): Remove function
