@@ -1,3 +1,10 @@
+2018-01-31  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/Vault.pm: Verify the dump is not already in the dest
+	  storage if uniq is set
+	* server-src/amvault.pl: New --uniq, --no-uniq argument
+	* man/xml-source/amvault.8.xml: Document it
+	* NEWS, ReleaseNotes: Add it
+
 2018-01-30  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* application-src/ampgsql.pl: exclude pg_wal/*
 
